# game-basecode

./: .gitignore  README
editors/: README
editors/rsedit-0.1/: Makefile.am  Makefile.in  configure  configure.ac
editors/rsedit-0.1/src/: Makefile.am  Makefile.in  glstuff.c  main.c  retrosprite.c  retrosprite.h
editors/rtmedit-0.1/: Makefile.am  Makefile.in  configure  configure.ac
editors/rtmedit-0.1/src/: Makefile.am  Makefile.in  glstuff.c  main.c  retroworld.c
editors/rtsedit-0.1/: Makefile.am  Makefile.in  README  configure  configure.ac
editors/rtsedit-0.1/src/: Makefile.am  Makefile.in  glstuff.c  main.c  retroworld.c  retroworld.h
src/: retro.h  retroassets.c  retroassets.h  retrocommon.c  retrocommon.h  retrolights.c  retrosprite.c  retrosprite.h  retrotext.c  retroworld.c  retroworld.h  retrowsfuncs.c
template-0.1/: Makefile.am  Makefile.in  configure  configure.ac
template-0.1/src/: Makefile.am  Makefile.in  main.c  retrosprite.c  retrosprite.h  retroworld.c  retroworld.h  retrowsfuncs.h
template-0.2/: Makefile.am  Makefile.in  README  configure  configure.ac
template-0.2/src/: Makefile.am  Makefile.in  debug.c  debug.h  main.c  retro.h  retroassets.h  retrocommon.c  retrocommon.h  retrolights.c  retrolights.h  retrosound.c  retrosound.h  retrosprite.c  retrotext.c  retrotext.h  stb_image.c
template-0.3/src/: Makefile.am
